# tensorhive/models/Task.py
@@ -3,7 +3,6 @@ from tensorhive.database import Base
 from sqlalchemy.orm import relationship, backref
 from tensorhive.models.CRUDModel import CRUDModel
 from tensorhive.models.CommandSegment import SegmentType, CommandSegment, CommandSegment2Task
-from tensorhive.utils.DateUtils import DateUtils
 import enum
 import logging
 log = logging.getLogger(__name__)
@@ -26,11 +25,7 @@ class Task(CRUDModel, Base):  # type: ignore
     pid = Column(Integer)
     status = Column(Enum(TaskStatus), default=TaskStatus.not_running, nullable=False)
     command = Column(String(400), nullable=False)
-    _spawns_at = Column(DateTime)
-    _terminates_at = Column(DateTime)
     _cmd_segments = relationship('CommandSegment', secondary='cmd_segment2task', back_populates='_tasks')
-
-# TODO write tests for cascade CommandSegment delete when Task is deleted
 
     def __repr__(self):
         return '<Task id={id}, jobId={job_id}, name={host}, command={command}\n' \
@@ -131,15 +126,8 @@ class Task(CRUDModel, Base):  # type: ignore
             else:
                 if (link.index > removed_index):
                     setattr(link, '_index', link.index - 1)
-        self.save()
+        self.save() 
 
-    @hybrid_property
-    def spawns_at(self):
-        return self._spawns_at
-
-    @hybrid_property
-    def terminates_at(self):
-        return self._terminates_at
 
     @property
     def as_dict(self):
@@ -149,7 +137,5 @@ class Task(CRUDModel, Base):  # type: ignore
             'hostname': self.host,
             'pid': self.pid,
             'status': self.status.name,
-            'command': self.command,
-            'spawnAt': DateUtils.try_stringify_datetime(self.spawn_at),
-            'terminateAt': DateUtils.try_stringify_datetime(self.terminate_at)
-        }
+            'command': self.command
+         }
